--- a/google/distributed_code_jam/distributed_code_jam.vcxproj.filters
+++ b/google/distributed_code_jam/distributed_code_jam.vcxproj.filters
@@ -16,37 +16,28 @@
     <Filter Include="Source Files\2018">
       <UniqueIdentifier>{a637b706-fb61-48a4-8637-df091b4a2c8e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\2018\practice">
-      <UniqueIdentifier>{d5d35ecd-7f81-4287-ab08-8693860b6dab}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\2018\r1">
       <UniqueIdentifier>{193c2f74-c98b-4686-83d0-3f33c0ec9e94}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\2017">
+      <UniqueIdentifier>{fd7ee7aa-8110-4a5e-b7b3-ae61ca2d5747}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\2017\r1">
+      <UniqueIdentifier>{0b644dbe-479e-4e8b-9f19-3834aae546ff}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\2017\r2">
+      <UniqueIdentifier>{a7320bbb-af29-4d5b-bdb1-a9bcba771984}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\2017\r3">
+      <UniqueIdentifier>{693caab3-5773-4d91-ab71-28678702e981}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="message.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="2018\practice\baby_blocks.h">
-      <Filter>Source Files\2018\practice</Filter>
-    </ClInclude>
-    <ClInclude Include="2018\practice\flagpoles.h">
-      <Filter>Source Files\2018\practice</Filter>
-    </ClInclude>
-    <ClInclude Include="2018\practice\pancakes.h">
-      <Filter>Source Files\2018\practice</Filter>
-    </ClInclude>
     <ClInclude Include="2018\r1\stones.h">
       <Filter>Source Files\2018\r1</Filter>
-    </ClInclude>
-    <ClInclude Include="2018\practice\lemming.h">
-      <Filter>Source Files\2018\practice</Filter>
-    </ClInclude>
-    <ClInclude Include="2018\practice\number_bases.h">
-      <Filter>Source Files\2018\practice</Filter>
-    </ClInclude>
-    <ClInclude Include="2018\practice\weird_editor.h">
-      <Filter>Source Files\2018\practice</Filter>
     </ClInclude>
     <ClInclude Include="2018\r1\towels.h">
       <Filter>Source Files\2018\r1</Filter>
@@ -54,8 +45,29 @@
     <ClInclude Include="2018\r1\kenneth.h">
       <Filter>Source Files\2018\r1</Filter>
     </ClInclude>
-    <ClInclude Include="2018\practice\broken_memory.h">
-      <Filter>Source Files\2018\practice</Filter>
+    <ClInclude Include="2017\r1\pancakes.h">
+      <Filter>Source Files\2017\r1</Filter>
+    </ClInclude>
+    <ClInclude Include="2017\r1\query_of_death.h">
+      <Filter>Source Files\2017\r1</Filter>
+    </ClInclude>
+    <ClInclude Include="2017\r1\weird_editor.h">
+      <Filter>Source Files\2017\r1</Filter>
+    </ClInclude>
+    <ClInclude Include="2017\r2\broken_memory.h">
+      <Filter>Source Files\2017\r2</Filter>
+    </ClInclude>
+    <ClInclude Include="2017\r2\flagpoles.h">
+      <Filter>Source Files\2017\r2</Filter>
+    </ClInclude>
+    <ClInclude Include="2017\r2\number_bases.h">
+      <Filter>Source Files\2017\r2</Filter>
+    </ClInclude>
+    <ClInclude Include="2017\r3\baby_blocks.h">
+      <Filter>Source Files\2017\r3</Filter>
+    </ClInclude>
+    <ClInclude Include="2017\r3\lemming.h">
+      <Filter>Source Files\2017\r3</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -65,26 +77,8 @@
     <ClCompile Include="message_fake.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="2018\practice\baby_blocks.cpp">
-      <Filter>Source Files\2018\practice</Filter>
-    </ClCompile>
-    <ClCompile Include="2018\practice\flagpoles.cpp">
-      <Filter>Source Files\2018\practice</Filter>
-    </ClCompile>
-    <ClCompile Include="2018\practice\pancakes.cpp">
-      <Filter>Source Files\2018\practice</Filter>
-    </ClCompile>
     <ClCompile Include="2018\r1\stones.cpp">
       <Filter>Source Files\2018\r1</Filter>
-    </ClCompile>
-    <ClCompile Include="2018\practice\lemming.cpp">
-      <Filter>Source Files\2018\practice</Filter>
-    </ClCompile>
-    <ClCompile Include="2018\practice\number_bases.cpp">
-      <Filter>Source Files\2018\practice</Filter>
-    </ClCompile>
-    <ClCompile Include="2018\practice\weird_editor.cpp">
-      <Filter>Source Files\2018\practice</Filter>
     </ClCompile>
     <ClCompile Include="2018\r1\towels.cpp">
       <Filter>Source Files\2018\r1</Filter>
@@ -92,8 +86,34 @@
     <ClCompile Include="2018\r1\kenneth.cpp">
       <Filter>Source Files\2018\r1</Filter>
     </ClCompile>
-    <ClCompile Include="2018\practice\broken_memory.cpp">
-      <Filter>Source Files\2018\practice</Filter>
+    <ClCompile Include="2017\r1\pancakes.cpp">
+      <Filter>Source Files\2017\r1</Filter>
     </ClCompile>
+    <ClCompile Include="2017\r1\query_of_death.cpp">
+      <Filter>Source Files\2017\r1</Filter>
+    </ClCompile>
+    <ClCompile Include="2017\r1\weird_editor.cpp">
+      <Filter>Source Files\2017\r1</Filter>
+    </ClCompile>
+    <ClCompile Include="2017\r2\broken_memory.cpp">
+      <Filter>Source Files\2017\r2</Filter>
+    </ClCompile>
+    <ClCompile Include="2017\r2\flagpoles.cpp">
+      <Filter>Source Files\2017\r2</Filter>
+    </ClCompile>
+    <ClCompile Include="2017\r2\number_bases.cpp">
+      <Filter>Source Files\2017\r2</Filter>
+    </ClCompile>
+    <ClCompile Include="2017\r3\baby_blocks.cpp">
+      <Filter>Source Files\2017\r3</Filter>
+    </ClCompile>
+    <ClCompile Include="2017\r3\lemming.cpp">
+      <Filter>Source Files\2017\r3</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="problems.md">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
