--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -255,6 +255,9 @@
     <ClCompile Include="practice\mathematics\number_theory\help_mike.cpp">
       <Filter>Source Files\practice\mathematics\number_theory</Filter>
     </ClCompile>
+    <ClCompile Include="practice\mathematics\number_theory\the_chosen_one_treap.cpp">
+      <Filter>Source Files\practice\mathematics\number_theory</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
