Simplify RedBlackTree::InsertByKey using vector with path.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "vector": "cpp",
         "*.tcc": "cpp",
         "deque": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "list": "cpp"
     }
 }
