--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -267,6 +267,9 @@
     <ClCompile Include="practice\mathematics\number_theory\salary_blues.cpp">
       <Filter>Source Files\practice\mathematics\number_theory</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\balanced_trees\median_updates_upf_red_black.cpp">
+      <Filter>Source Files\practice\data_structures\balanced_trees</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
