--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -270,6 +270,9 @@
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_upf_red_black.cpp">
       <Filter>Source Files\practice\data_structures\balanced_trees</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\balanced_trees\median_updates_fixed.cpp">
+      <Filter>Source Files\practice\data_structures\balanced_trees</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
