--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -273,6 +273,9 @@
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_fixed.cpp">
       <Filter>Source Files\practice\data_structures\balanced_trees</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\stacks\game_of_two_stacks.cpp">
+      <Filter>Source Files\practice\data_structures\stacks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
