--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="practice\data_structures\stacks\game_of_two_stacks.cpp" />
     <ClCompile Include="practice\data_structures\stacks\largest_rectangle.cpp" />
     <ClCompile Include="practice\data_structures\stacks\maximum_element.cpp" />
+    <ClCompile Include="practice\data_structures\stacks\simple_text_editor.cpp" />
     <ClCompile Include="practice\data_structures\trees\balanced_forest.cpp" />
     <ClCompile Include="practice\data_structures\trees\jennys_subtrees.cpp" />
     <ClCompile Include="practice\data_structures\trees\kittys_calculations_on_a_tree.cpp" />
