--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -276,6 +276,9 @@
     <ClCompile Include="practice\data_structures\stacks\game_of_two_stacks.cpp">
       <Filter>Source Files\practice\data_structures\stacks</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\stacks\simple_text_editor.cpp">
+      <Filter>Source Files\practice\data_structures\stacks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
