Add solution for "Waiter" problem.

--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -279,6 +279,9 @@
     <ClCompile Include="practice\data_structures\stacks\simple_text_editor.cpp">
       <Filter>Source Files\practice\data_structures\stacks</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\stacks\waiter.cpp">
+      <Filter>Source Files\practice\data_structures\stacks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
