--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -297,6 +297,9 @@
     <ClCompile Include="practice\data_structures\queues\truck_tour.cpp">
       <Filter>Source Files\practice\data_structures\queues</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\queues\queries_with_fixed_length.cpp">
+      <Filter>Source Files\practice\data_structures\queues</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
