--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_upt_splay.cpp" />
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_upt_treap.cpp" />
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_fixed.cpp" />
+    <ClCompile Include="practice\data_structures\queues\castle_on_the_grid.cpp" />
     <ClCompile Include="practice\data_structures\queues\down_to_zero_ii.cpp" />
     <ClCompile Include="practice\data_structures\queues\queries_with_fixed_length.cpp" />
     <ClCompile Include="practice\data_structures\queues\queue_using_two_stacks.cpp" />
