Add solution for "Find the Running Median" problem.

--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -309,6 +309,9 @@
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_fixed_tree.cpp">
       <Filter>Source Files\practice\data_structures\balanced_trees</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\heap\find_the_running_median.cpp">
+      <Filter>Source Files\practice\data_structures\heap</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
