Add solution for "Components in a graph" problem.

--- a/hackerrank/hackerrank.vcxproj.filters
+++ b/hackerrank/hackerrank.vcxproj.filters
@@ -324,6 +324,9 @@
     <ClCompile Include="practice\data_structures\disjoint_set\merging_communities.cpp">
       <Filter>Source Files\practice\data_structures\disjoint_set</Filter>
     </ClCompile>
+    <ClCompile Include="practice\data_structures\disjoint_set\components_in_a_graph.cpp">
+      <Filter>Source Files\practice\data_structures\disjoint_set</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
