Add solution for "Kundu and Tree" problem.

--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_upt_treap.cpp" />
     <ClCompile Include="practice\data_structures\balanced_trees\median_updates_fixed_tree.cpp" />
     <ClCompile Include="practice\data_structures\disjoint_set\components_in_a_graph.cpp" />
+    <ClCompile Include="practice\data_structures\disjoint_set\kundu_and_tree.cpp" />
     <ClCompile Include="practice\data_structures\disjoint_set\merging_communities.cpp" />
     <ClCompile Include="practice\data_structures\heap\find_the_running_median.cpp" />
     <ClCompile Include="practice\data_structures\heap\jesse_and_cookies.cpp" />
