--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -175,6 +175,8 @@
     <ClCompile Include="practice\data_structures\trees\kittys_calculations_on_a_tree.cpp" />
     <ClCompile Include="practice\data_structures\trees\swap_nodes_algo.cpp" />
     <ClCompile Include="practice\data_structures\trees\tree_coordinates.cpp" />
+    <ClCompile Include="practice\data_structures\trie\contacts.cpp" />
+    <ClCompile Include="practice\data_structures\trie\no_prefix_set.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\army_game.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\best_divisor.cpp" />
     <ClCompile Include="practice\mathematics\fundamentals\bus_station.cpp" />
