Add solution for "Cube Summation" problem.

--- a/hackerrank/hackerrank.vcxproj
+++ b/hackerrank/hackerrank.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="practice\data_structures\advanced\cube_summation.cpp" />
     <ClCompile Include="practice\data_structures\advanced\kindergarten_adventures_bit.cpp" />
     <ClCompile Include="practice\data_structures\advanced\kindergarten_adventures_linear.cpp" />
     <ClCompile Include="practice\data_structures\arrays\2d_arrays_ds.cpp" />
