--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,29 @@ add_executable( google_distributed_code_jam ${GOOGLE_DISTRIBUTED_CODE_JAM_SOURCE
 target_include_directories(google_distributed_code_jam PRIVATE "${PROJECT_SOURCE_DIR}/google/distributed_code_jam" )
 
 file( GLOB_RECURSE GOOGLE_CODE_JAM_SOURCES RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/google/code_jam/*.cpp" ) 
-add_executable( google_code_jam ${GOOGLE_CODE_JAM_SOURCES} )
+list( SORT GOOGLE_CODE_JAM_SOURCES )
+set( GOOGLE_CODE_JAM_PROXY_H "${PROJECT_SOURCE_DIR}/google/code_jam/proxy_gen.h" )
+set( GOOGLE_CODE_JAM_PROXY_CXX "${PROJECT_SOURCE_DIR}/google/code_jam/proxy_gen.cxx" )
+file ( WRITE ${GOOGLE_CODE_JAM_PROXY_H} "#pragma once\n" )
+file ( WRITE ${GOOGLE_CODE_JAM_PROXY_CXX} 
+    "#include \"proxy_gen.h\"\n"
+    "#include <iostream>\n"
+    "#include <string>\n\n"
+    "int proxy(const std::string& s)\n{\n"
+    "\tif (false) return -1;\n" )
+foreach( problemsourcefile ${GOOGLE_CODE_JAM_SOURCES} )
+    string( REPLACE ".cpp" "" problemname ${problemsourcefile} )
+    get_filename_component( problembasename ${problemname} NAME )
+    if ( ${problembasename} MATCHES "main")
+    else ( ${problembasename} MATCHES "main")
+        file ( APPEND ${GOOGLE_CODE_JAM_PROXY_H} "int main_${problembasename}();\n" )
+        file ( APPEND ${GOOGLE_CODE_JAM_PROXY_CXX} "\telse if (s == \"${problembasename}\") return main_${problembasename}();\n" )
+    endif ( ${problembasename} MATCHES "main")
+endforeach( problemsourcefile ${GOOGLE_CODE_JAM_SOURCES} )
+file ( APPEND ${GOOGLE_CODE_JAM_PROXY_CXX}
+    "\tstd::cout << \"Unknown solution name: \" << s << std::endl;\n"
+    "\treturn -1;\n}\n" )
+add_executable( google_code_jam ${GOOGLE_CODE_JAM_SOURCES} ${GOOGLE_CODE_JAM_PROXY_CXX} )
 
 file( GLOB_RECURSE HACKERRANK_SOURCES RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/hackerrank/*.cpp" )
 list( SORT HACKERRANK_SOURCES )
